# rust-homework-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint
