[package]
name = "homework-rs"
version = "0.1.0"
authors = ["liuhui"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
chrono = "0.4"
simple_excel_writer = "0.2.0"
rand = "0.8"
anyhow = "1.0.79"
eval = "0.4.3"

[build-dependencies]
slint-build = "1.4"
